--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
 	<style>
 		#grad1{
-			height: 1200px;
-			background-color: skyblue;
-			background-image: linear-gradient(skyblue,yellow);
+			height: 1400px;
+			background-color: red;
+			background-image: linear-gradient(green,white);
 		}
 	</style>
 	<title>CONTACT US</title>
