updated your html file
made changes in css file

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
 	<style>
 		#grad1{
-			height: 1200px;
-			background-color: skyblue;
-			background-image: linear-gradient(skyblue,yellow);
+			height: 1300px;
+			background-color: blue;
+			background-image: linear-gradient(blue,red);
 		}
 	</style>
 	<title>CONTACT US</title>
